<resources>
    <string name="app_name">OnlineShop</string>
    <string name="description_placeholder">Select a product to see the description...</string>
    <string name="product">Product</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="get_help">Talk with us</string>
    <string name="show_my_name">Show My Name</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sensors_title">Sensors List</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="current_location">Current location: -</string>
    <string name="my_location_title">My Location</string>
    <string name="support">Support</string>
    <string name="sensors">Sensors</string>
    <string name="take_a_photo">Take a photo</string>
</resources>
