<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/user"
        android:title="@string/user">
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/login" />

            <item
                android:id="@+id/log_out"
                android:title="@string/logout" />
        </menu>
    </item>

    <item android:id="@+id/app_settings"
        android:title="@string/title_activity_settings" />

    <item
        android:id="@+id/help"
        android:title="@string/support">
        <menu>

            <item
                android:id="@+id/get_help"
                android:title="@string/get_help" />
            <item
                android:id="@+id/sensors"
                android:title="@string/sensors" />
            <item
                android:id="@+id/my_location"
                android:title="@string/my_location_title" />
        </menu>
    </item>

</menu>
